[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["muntertool"]

[project]
name = "muntertool"
version = "0.0.1"
dependencies = [
    "click",
    "gpxpy", 
    "pyproj", 
    "tabulate"
]

[project.scripts]
muntertool = "muntertool.muntertool:muntertool"