[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["muntertool"]

[project]
name = "muntertool"
version = "0.0.1"
dependencies = [
    "click >= 8.1.3",
    "gpxpy >= 1.5.0", 
    "pyproj >= 3.4.0", 
    "tabulate >= 0.9.0",
    "tqdm >= 4.64.1"
]

[project.scripts]
muntertool = "muntertool.muntertool:muntertool"